--- a/HRM_Web_App/appsettings.json
+++ b/HRM_Web_App/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "ConnectionStrings": {
+      "DefaultConnection": "Host=localhost;Port=5432;Database=AuthData;Username=khai_TR;Password=09122002"
+    },
+  "HRMDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "HRMWebApplication"
+  },
+  "Jwt":{
+    "Key": "13196d8a-c59a-48a9-b076-5c141717578b",
+    "Issuer": "https://localhost:7050",
+    "Audience": "https://localhost:51573"
+  }
 }
